# web

./: .code-workspace  .eslintrc.json  .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  Dockerfile  README.md  app.vue  buildspec.yml  next.config.mjs  nginx.conf  nuxt.config.ts  opencode.jsonc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  install-cargo-binstall.sh
.github/: dependabot.yml  pull_request_template.md
.husky/: pre-commit
.storybook/: main.ts  preview.ts
app/: router.options.ts
assets/: global.scss
cache-warmer/: README.md  main.py  pyproject.toml
cdk/: README.md
components/: Footer.vue  Header.vue
crates/api/: Cargo.toml  Justfile  README.md  endpoints.json
crates/api/scripts/: deploy-function.sh  deploy.rs
crates/api/src/: error.rs  main.rs
crates/api/src/graphql/: handler.rs  mod.rs  query.rs  schema.rs
crates/api/src/graphql/blog/: query.rs
crates/api/src/model/: blog.rs
crates/api/src/repository/: blog.rs
crates/api/src/rest/: handler.rs  mod.rs
crates/api/src/rest/blog/: controller.rs  service.rs
crates/blog-sdk/: Cargo.toml  README.md
crates/blog-sdk/src/: error.rs  types.rs
crates/blog-sdk/src/command/: get_jarkup.rs  get_jarkup_by_slug.rs  list_blogs.rs  list_tags.rs  mod.rs
crates/blog-sdk/tests/: get_block_image.rs  get_jarkup.rs  get_jarkup_by_slug.rs  list_blogs.rs  list_tags.rs
crates/gql/: Cargo.toml
crates/gql/src/: main.rs  query.rs
crates/gql/src/resolvers/: blog.rs
crates/graphql/: Cargo.toml  Justfile
crates/graphql/src/: main.rs  query.rs  resolvers.rs
crates/graphql/src/resolvers/: blog.rs  greet.rs  ogp.rs
crates/http-api/: Cargo.toml  Justfile  README.md
crates/http-api-old/: Cargo.toml  Justfile  README.md
crates/http-api-old/src/: error.rs  execute.rs  lambda_tracing_subscriber.rs  main.rs  query.rs  schema.rs
crates/http-api-old/src/cache/: mod.rs
crates/http-api-old/src/controller/: blog.rs
crates/http-api-old/src/entity/: blog.rs  mod.rs
crates/http-api-old/src/repository/: talk.rs
crates/http-api-old/src/resolver/: mod.rs
crates/http-api-old/src/resolver/blog/: query.rs
crates/http-api-old/src/service/: mod.rs  talk.rs
crates/http-api/src/: cache.rs  config.rs  context.rs  error.rs  execute.rs  graphql_handler.rs  http_handler.rs  lambda_tracing_subscriber.rs  lib.rs  main.rs  query.rs  router.rs  schema.rs
crates/http-api/src/cache/: mod.rs
crates/http-api/src/controller/: blog.rs  mod.rs
crates/http-api/src/entity/: blog.rs  mod.rs  talk.rs
crates/http-api/src/record/: blog.rs  mod.rs
crates/http-api/src/repository/: blog.rs  mod.rs  web_config.rs
crates/http-api/src/resolver/: mod.rs
crates/http-api/src/resolver/blog/: query.rs
crates/http-api/src/resolver/talk/: query.rs
crates/http-api/src/resolver/web_config/: query.rs
crates/http-api/src/service/: blog.rs  mod.rs  web_config.rs
crates/rest-image/: Cargo.toml
crates/rest-image/src/: main.rs
crates/web-axum-rest-blog-v2/: Cargo.toml
crates/web-axum-rest-blog-v2/src/: router.rs
crates/web-blog-sdk/: Cargo.toml  README.md
crates/web-blog-sdk/src/: error.rs  lib.rs  types.rs  util.rs
crates/web-blog-sdk/src/command/: get_a2ui_by_slug.rs  get_block_image.rs  get_jarkup_by_slug.rs  list_blogs.rs  list_tags.rs  mod.rs
crates/web-blog-sdk/tests/: get_a2ui_by_slug.rs  get_block_image.rs  get_jarkup_by_slug.rs  list_blogs.rs  list_tags.rs
crates/web-lambda-cache-warmer/: Cargo.toml  Justfile  README.md
crates/web-lambda-cache-warmer/src/: generic_handler.rs  lib.rs  sitemap.rs  ssm.rs  util.rs
crates/web-lambda-cache-warmer/tests/: sitemap.rs
crates/web-lambda-http-api/: Cargo.toml  Justfile
crates/web-lambda-http-api/src/: axum_router.rs  error.rs  execute_axum.rs  lib.rs  main.rs
crates/web-lambda-http-api/src/blog/: controller.rs  dto.rs  entity.rs  mod.rs  publisher.rs  repository.rs  response.rs  router.rs  use_case.rs
crates/web-lambda-http-api/src/blog/controller/: list_blogs.rs  mod.rs  request.rs  response.rs
crates/web-lambda-http-api/src/blog/repository/: input.rs  mod.rs  output.rs
crates/web-lambda-http-api/src/blog/use_case/: input.rs  mod.rs  output.rs
crates/web-lambda-http-api/src/once_cell_cache/: aws_config.rs  cloudfront_client.rs  mod.rs  n2a2ui_client.rs  notion_to_jarkup_client.rs  notionrs_client.rs  s3_client.rs  ssm_parameter.rs  stage_name.rs
crates/web-lambda-http-api/src/once_cell_cache/ssm_parameter/: blog_master_data_source_id.rs  blog_tag_data_source_id.rs  mod.rs  notion_api_key.rs  talks_data_source_id.rs
crates/web-lambda-http-api/src/talk/: controller.rs  dto.rs  entity.rs  mod.rs  repository.rs  response.rs  use_case.rs
crates/web-lambda-http-api/src/web_config/: controller.rs  mod.rs  repository.rs  router.rs  use_case.rs
crates/web-lambda-http-api/src/web_config/controller/: mod.rs  response.rs
crates/web-lambda-http-api/src/web_config/repository/: mod.rs
crates/web-lambda-http-api/src/web_config/use_case/: mod.rs
crates/web-lambda-logs-reporter/: Cargo.toml  Justfile
crates/web-lambda-logs-reporter/src/: event_handler.rs
crates/web-napi-sdk/: .gitattributes  .gitignore  Cargo.toml  README.md  package.json
crates/web-napi-sdk/src/: error.rs  types.rs
crates/web-napi-sdk/src/command/: get_block_image.rs  get_jarkup_by_slug.rs  list_blogs.rs  list_tags.rs  mod.rs
crates/web-napi-sdk/tests/: get_block_image.rs  get_jarkup_by_slug.rs  list_blogs.rs  list_tags.rs
docs/: cdn-path-design.md  solid-start-i18n-plan.md
helpers/: getAllBlogSlug.ts
iac/: acm.tf  backend.tf  cloudfront.tf  codebuild.tf  codepipeline.tf  iam.tf  provider.tf  route53.tf  s3.tf
layouts/: blog.vue  default.vue
pages/: blog.vue  index.vue
plugins/: vue-query.ts
src/: Factory.ts  StoreProvider.tsx  _mixins.scss  _variables.scss  config.ts  mdx-components.tsx
terraform/: .terraform.lock.hcl  README.md  acm-global.tf  acm.tf  apigw.tf  cloudfront.tf  cloudwatch-alarm.tf  cloudwatch-logs.tf  cognito.tf  dynamodb.tf  (+7 more)
(+179 files in other folders)
