[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# WEB
axum = "0.8.6"
http = "1.3.1"
tower-http = { version = "0.6.4", features = [
    "catch-panic",
    "compression-full",
    "normalize-path",
] }

# HTTP Client
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "http2",
] }

# AWS Lambda
lambda_http = "0.17.0"

# Logging
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.20"

# Ser/De
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
quick-xml = { version = "0.38.4", features = ["serialize"] }

# Asynchronous runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# General Utils
tower = "0.5.2"
bytes = "1.10.1"
futures = "0.3.31"
dotenvy = "0.15.7"
thiserror = "2.0.17"
anyhow = "1.0.100"
infer = "0.19.0"
strum = "0.27.2"
strum_macros = "0.27.2"

# Notion
jarkup-rs = "0.5.1"
notion-to-jarkup = "0.8.0"
notionrs = "0.3.0"
notionrs_types = "0.3.0"

# OpenAPI
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
