[package]
name = "api"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
async-graphql = "7.0.13"
async-trait = "0.1.86"
bytes = "1.9.0"
dotenvy = "0.15.7"
elmethis-notion = "1.0.0-alpha.7"
infer = "0.16.0"
lambda_http = "0.14.0"
notionrs = { version = "1.0.0-alpha.29", features = ["rustls-tls"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.11"

tokio = { version = "1", features = ["macros"] }
