[package]
name = "blog-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP Client
reqwest = { workspace = true }

# General Utils
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# Notion
jarkup-rs = { workspace = true }
notion-to-jarkup = { workspace = true }
notionrs = { workspace = true }
notionrs_types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
