[package]
name = "gql"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
async-graphql = "7.0.11"
dotenvy = "0.15.7"
lambda_http = "0.13.0"
notionrs = "1.0.0-alpha.15"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1", features = ["macros"] }

