[package]
name = "http-api-old"
version = "0.1.2"
edition = "2024"

[dependencies]
async-graphql = "7.0.16"
async-trait = "0.1.88"
aws-config = "1.6.1"
aws-sdk-ssm = "1.71.0"
bytes = "1.11.1"
chrono = "0.4.40"
lambda_http = "0.14.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"

reqwest = { workspace = true }

tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
axum = "0.8.3"
tower = "0.5.2"
jarkup-rs = "0.4.0"
notionrs = "1.0.0-beta"
notionrs_types = "1.0.0-rc"
notion-to-jarkup = "0.5"
infer = "0.19.0"
tower-http = { version = "0.6.4", features = [
    "catch-panic",
    "compression-full",
    "normalize-path",
] }
tracing-subscriber = { version = "0.3.20", features = ["ansi"] }
http = "1.3.1"
html-meta-scraper = "0.2.0"
