[package]
name = "http-api-old"
version = "0.1.2"
edition = "2024"

[dependencies]
# AWS SDK
aws-sdk-ssm = { workspace = true }
aws-config = { workspace = true }

# AWS Lambda
lambda_http = { workspace = true }

async-graphql = "7.0.16"
async-trait = "0.1.88"
bytes = "1.11.1"
chrono = "0.4.40"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"

reqwest = { workspace = true }

tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
axum = "0.8.3"
tower = "0.5.2"

# Notion
jarkup-rs = { workspace = true }
notion-to-jarkup = { workspace = true }
notionrs = { workspace = true }
notionrs_types = { workspace = true }

infer = "0.19.0"
tower-http = { version = "0.6.4", features = [
    "catch-panic",
    "compression-full",
    "normalize-path",
] }
tracing-subscriber = { version = "0.3.20", features = ["ansi"] }
http = "1.3.1"
html-meta-scraper = "0.2.0"
