[package]
name = "http-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.16"
async-trait = "0.1.88"
aws-config = "1.6.1"
aws-sdk-ssm = "1.71.0"
bytes = "1.10.1"
chrono = "0.4.40"
elmethis-notion = "1.0.0-alpha.21"
lambda_http = "0.14.0"
notionrs = "1.0.0-alpha.38"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"

reqwest = { version = "0.12.15", features = [
    "rustls-tls",
], default-features = false }

tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"] }
url = "2.5.4"
image = "0.25.6"
webp = "0.3.0"
axum = "0.8.3"
tower = "0.5.2"
