[package]
name = "rest-image"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
infer = "0.16.0"
lambda_http = "0.13.0"
openssl = { version = "0.10.68", features = ["vendored"] }
reqwest = "0.12.9"

tokio = { version = "1", features = ["macros"] }

