[package]
name = "web-axum-rest-blog-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
# WEB
axum = { workspace = true }
http = { workspace = true }

# Ser/De
serde = { workspace = true }
serde_json = { workspace = true }

# Asynchronous Runtime
tokio = { workspace = true }

# General Utils
anyhow = { workspace = true }
