[package]
name = "web-blog-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP Client
reqwest = { workspace = true }

# General Utils
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# Notion
n2a2ui = { workspace = true }
n2a2ui-a2ui = { workspace = true }
notionrs = { workspace = true }
notionrs_types = { workspace = true }

# time
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
