[package]
name = "web-lambda-cache-warmer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Asynchronous runtime
tokio = { workspace = true }

# HTTP
http = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# AWS Lambda
lambda_runtime = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Ser/De
serde = { workspace = true }
serde_json = { workspace = true }

# General Utils
base64 = { workspace = true }
dotenvy = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-ssm = { workspace = true }
futures.workspace = true

# Feed
sitemap = { workspace = true }

# Regular Expression
regex = { workspace = true }
scraper = { workspace = true }
