[package]
name = "web-lambda-http-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# WORKSPACE
web-blog-sdk = { path = "../web-blog-sdk" }

# WEB
axum = { workspace = true }
http = { workspace = true }
tower-http = { workspace = true }

# AWS Lambda
lambda_http = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Ser/De
serde = { workspace = true }
serde_json = { workspace = true }

# Asynchronous Runtime
tokio = { workspace = true }

# General Utils
tower = { workspace = true }
anyhow = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
