[package]
name = "web-lambda-http-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# WORKSPACE
web-blog-sdk = { path = "../web-blog-sdk" }
axum = { workspace = true, features = ["macros"] }
http = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

# HTTP Client
reqwest = { workspace = true }


# AWS Lambda
lambda_http = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Ser/De
serde = { workspace = true }
serde_json = { workspace = true }

# Asynchronous Runtime
tokio = { workspace = true }

# General Utils
tower = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
infer = "0.19.0"

# Notion
jarkup-rs = { workspace = true }
notion-to-jarkup = { workspace = true }
notionrs = { workspace = true }
notionrs_types = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
aws-sdk-ssm = "1.96.0"
aws-config = "1.8.8"
image = "0.25.9"
