[package]
name = "web-lambda-http-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# WORKSPACE
web-blog-sdk = { path = "../web-blog-sdk" }

# HTTP
http = { workspace = true }

# HTTP Server
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["cors"] }

# HTTP Client
reqwest = { workspace = true }

# AWS SDK
aws-sdk-ssm = { workspace = true }
aws-config = { workspace = true }

# AWS Lambda
lambda_http = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Ser/De
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }

# Asynchronous Runtime
tokio = { workspace = true }

# General Utils
tower = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
infer = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Notion
jarkup-rs = { workspace = true }
notion-to-jarkup = { workspace = true }
notionrs = { workspace = true }
notionrs_types = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Image
image = { workspace = true }

# time
time = { workspace = true }
chrono = { workspace = true }

# feed
rss = { workspace = true }
atom_syndication = { workspace = true }
jsonfeed = { workspace = true }

# Regular Expression
regex = { workspace = true }
