
[package]
authors = ["Ikuma Yamashita"]
edition = "2024"
name = "web_napi_sdk"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# General Utils
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# Notion
jarkup-rs = { workspace = true }
notion-to-jarkup = { workspace = true }
notionrs = { workspace = true }
notionrs_types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[profile.release]
lto = true
strip = "symbols"
